<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    <TextView
        android:id="@+id/textViewFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter the first number" />
    <TextView
        android:id="@+id/textViewSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter the second number" />
    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:addStatesFromChildren="false" />


    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="Add"
        android:onClick="add"/>

    <Button
        android:id="@+id/button_substract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="Substract"
        android:onClick="substract"/>

    <TextView
        android:id="@+id/textView_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Result" />
</LinearLayout>